# bazel-rules-js-vite

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  package.json  pnpm-lock.yaml
